# slugline

./: .gitignore  Cargo.toml  Makefile  README.md
.complexity/: web_20260625_1646.md
crates/slugline/: Cargo.toml
crates/slugline-core/: Cargo.toml
crates/slugline-core/src/: agenda.rs  config.rs  dates.rs  lib.rs  store.rs  tabs.rs  theme.rs  todos.rs
crates/slugline-core/src/doc/: classify.rs  command.rs  context.rs  mod.rs  render_inline.rs  scan.rs
crates/slugline-core/src/editor/: commands.rs  edits.rs  insert.rs  keymap.rs  mod.rs  motions.rs  state.rs
crates/slugline/src/: app.rs  cli.rs  keys.rs  main.rs  theme_iced.rs
crates/slugline/src/ui/: agenda.rs  calendar.rs  command_palette.rs  editor_pane.rs  mod.rs  palette.rs  sidebar.rs  status_line.rs  tab_strip.rs  toast.rs  todo_list.rs
dev-notes/: 2026-06-17.md  2026-06-24.md
docs/: document-grammar.md
docs/superpowers/plans/: 2026-06-25-header-redesign.md  2026-06-26-markdown-highlighting.md  2026-06-26-people-command.md  2026-07-01-complexity-hotspot-refactor.md  2026-07-01-iced-port-phase-0-scaffold.md  2026-07-01-iced-port-phase-1a-doc-model.md  2026-07-01-iced-port-phase-1b-editor-engine.md  2026-07-01-iced-port-phase-1c-iced-editing.md  (+7 more)
fixtures/: empty-template.md  full-day.md  malformed.md  subsections.md
plans/: 2026-06-23-phase-1-document-model.md  2026-06-23-phase-2-rust-file-api.md  2026-06-23-phase-3-frontend-shell.md  2026-06-23-phase-4-editor.md  2026-06-23-phase-5-sidebar.md  2026-06-23-phase-6-themes-packaging.md  2026-06-23-slugline-roadmap.md  2026-06-24-theme-persistence-flat-rails.md  design_idea.md
src/: app.rs  assets.rs  cli.rs  config.rs  date.rs  lib.rs  main.rs  store.rs
web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.svelte  app.css  main.ts
(+57 files in other folders)
