[package]
name = "slugline-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
toml_edit = "0.25"
dirs = "6.0.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3.27.0"
