[package]
name = "slugline"
version.workspace = true
edition.workspace = true

[dependencies]
slugline-core = { path = "../slugline-core" }
iced = { version = "0.13", features = ["tokio"] }
clap = { version = "4.6.1", features = ["derive"] }

[dev-dependencies]
dirs = "6.0.0"
smol_str = "0.2"
tempfile = "3.27.0"
